--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,17 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tokio = { version = "1.15.0", features = ["full"] }
+tokio = { version = "1.28", features = ["full"] }
+
+tungstenite = "0.19"
+reqwest = { version = "0.11", features = ["cookies", "json"] }
+reqwest_cookie_store = "0.5"
+serde_json = "1.0"
+scraper = "0.16"
+
 tui = "0.19"
-crossterm = "0.26.1"
-tungstenite = "0.18.0"
-reqwest = { version = "0.11.6", features = ["cookies", "json"] }
-serde_json = "1.0.95"
-reqwest_cookie_store = "0.5.0"
-scraper = "0.15.0"
-thiserror = "1.0.40"
+crossterm = "0.26"
+tui-textarea = "0.2"
+
+thiserror = "1.0"
+cli-clipboard = "0.4"
