--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,13 @@ edition = "2021"
 [dependencies]
 tokio = { version = "1.28", features = ["full"] }
 
-tungstenite = "0.19"
+tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
+futures-util = "0.3"
 reqwest = { version = "0.11", features = ["cookies", "json"] }
 reqwest_cookie_store = "0.5"
-serde_json = "1.0"
 scraper = "0.16"
+serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 
 tui = "0.19"
 crossterm = "0.26"
