--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1.28", features = ["full"] }
+console-subscriber = "0.1"
 
 reqwest = { version = "0.11", features = ["cookies", "json"] }
 reqwest_cookie_store = "0.5"
@@ -16,9 +17,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_with = "3.0"
 
-tui = "0.19"
-crossterm = "0.26"
-tui-textarea = "0.2"
+cursive = { version = "0.20", default-features = false, features = ["crossterm-backend"] }
 
 thiserror = "1.0"
 cli-clipboard = "0.4"
